--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Perl::Squish
 
+1.05 Sun  5 Apr 2009
+	- Upgrading to Module::Install 0.81
+	- Upgrading Test::More to use it's new_ok
 	- Strip whitespace in qw//
 
 1.04 Sat 16 Aug 2008
